[gd_scene load_steps=9 format=3 uid="uid://bte5dcwrm7m0y"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_ydx8k"]
[ext_resource type="PackedScene" uid="uid://6e7l3l3q7g3h" path="res://Scenes/Objects/notes_parallax_bg.tscn" id="2_60k5j"]
[ext_resource type="PackedScene" uid="uid://dmcv72611vxps" path="res://Scenes/Objects/DevMenu.tscn" id="3_slqtq"]

[sub_resource type="LabelSettings" id="LabelSettings_rf6d1"]
font_size = 64

[sub_resource type="Animation" id="Animation_a8bis"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu/mod:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6h1ku"]
resource_name = "fade_in"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu/mod:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.733333),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m1u6l"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu/mod:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.733333),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ko1p"]
_data = {
"RESET": SubResource("Animation_a8bis"),
"fade_in": SubResource("Animation_6h1ku"),
"fade_out": SubResource("Animation_m1u6l")
}

[node name="main" type="Node2D"]
script = ExtResource("1_ydx8k")

[node name="bg" parent="." instance=ExtResource("2_60k5j")]

[node name="menu" type="CanvasLayer" parent="."]

[node name="bg_overlay" type="ColorRect" parent="menu"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.356863)

[node name="mod" type="CanvasModulate" parent="menu"]

[node name="main" type="Panel" parent="menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -760.0
offset_top = -440.0
offset_right = 760.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="menu/main"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -367.0
offset_right = 367.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Untitled Rhythm Engine"
label_settings = SubResource("LabelSettings_rf6d1")

[node name="RichTextLabel" type="RichTextLabel" parent="menu/main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[rainbow freq=0.2][wave amp=50.0 freq=5.0 connected=1] Version: 1.0"

[node name="start" type="Button" parent="menu/main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -126.5
offset_right = 51.5
offset_bottom = -73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "START"

[node name="opt" type="Button" parent="menu/main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -26.5
offset_right = 74.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"

[node name="quit" type="Button" parent="menu/main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = 73.5
offset_right = 42.5
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="DevMenu" parent="." instance=ExtResource("3_slqtq")]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ko1p")
}
autoplay = "fade_in"

[connection signal="button_up" from="menu/main/start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="menu/main/opt" to="." method="_on_opt_button_up"]
[connection signal="button_up" from="menu/main/quit" to="." method="_on_quit_button_up"]
